internal/reconciliations/istioresources/networkpolicies/allow-cni.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  labels:
    kyma-project.io/module: istio
    kyma-project.io/managed-by: kyma
  name: kyma-project.io--istio-cni-node
  namespace: istio-system
spec:
  podSelector:
    matchLabels:
      k8s-app: istio-cni-node
  policyTypes:
    - Egress
  egress:
    - ports:
        - protocol: UDP
          port: 53
        - protocol: TCP
          port: 53
    - ports:
        - protocol: TCP
          port: __API_SERVER_PORT__
