internal/reconciliations/istioresources/networkpolicies/allow-ingressgateway.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  labels:
    kyma-project.io/module: istio
    kyma-project.io/managed-by: kyma
  name: kyma-project.io--istio-ingressgateway
  namespace: istio-system
spec:
  podSelector:
    matchLabels:
      istio: ingressgateway
  policyTypes:
    - Egress
    - Ingress
  egress:
    - to:
        - podSelector:
            matchLabels:
              istio: pilot
      ports:
        - protocol: TCP
          port: 15012
    - ports:
        - protocol: UDP
          port: 53
        - protocol: TCP
          port: 53
  ingress:
    - ports:
        - protocol: TCP
          port: 8080
        - protocol: TCP
          port: 8443
    - from:
        - podSelector:
            matchExpressions:
              - key: kyma-project.io/module
                operator: Exists
          namespaceSelector: {}
        - podSelector:
            matchLabels:
              networking.kyma-project.io/istio-metrics: allowed
          namespaceSelector: {}
        - podSelector:
            matchLabels:
              networking.kyma-project.io/metrics-scraping: allowed
          namespaceSelector: {}
      ports:
        - protocol: TCP
          port: 15020
        - protocol: TCP
          port: 15021
        - protocol: TCP
          port: 15090
